--- a/BookClub/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/BookClub/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
     <div class="container">
-      <a class="navbar-brand" [routerLink]="['/']">BookClub</a>
+      <a class="navbar-brand">BookClub</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -20,22 +20,20 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+          <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="!this._authService.isLogIn">
+            <a class="nav-link text-dark" [routerLink]="['/login']">LogIn</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
+          <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="!this._authService.isLogIn">
+            <a class="nav-link text-dark" [routerLink]="['/registry']">Registry</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
-            >
+          <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="this._authService.isLogIn">
+            <a class="nav-link text-dark" [routerLink]="['/booklist']">Book list</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="this._authService.isLogIn">
+            <a class="nav-link text-dark" [routerLink]="['/mybooklist']">My book list</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']" *ngIf="this._authService.isLogIn" (click)="this._logout.logOut()">
+            <a class="nav-link text-dark" [routerLink]="['/login']">LogOut</a>
           </li>
         </ul>
       </div>
