--- a/BookClub/ClientApp/src/app/booklist/booklist.component.css
+++ b/BookClub/ClientApp/src/app/booklist/booklist.component.css
@@ -1,9 +1,25 @@
+
+input{
+    width: 100%;
+    margin-bottom: 10px;
+}
+
 table {
   border: 1px solid #c5c5c5;
+  width: 500px;
+  margin-bottom: 10px;
 }
+
+  table th:nth-child(1),
+  table th:nth-child(3),
+  table td:nth-child(1),
+  table td:nth-child(3) {
+    width: 1px;
+    text-align: center;
+  }
 
   table td,
   table th {
     border: 1px solid #c5c5c5;
-    padding:5px;
+    padding: 5px;
   }
