--- a/BookClub/ClientApp/src/app/registry/registry.component.html
+++ b/BookClub/ClientApp/src/app/registry/registry.component.html
@@ -1,9 +1,17 @@
-<p>registry works!</p>
 
-<label>Username</label>
-<input type="text" [(ngModel)]="username" />
-<br />
-<label>Password</label>
-<input type="password" [(ngModel)]="password" />
-<br />
-<button class="btn btn-primary" (click)="registry()">Registry</button>
+<div class="wrapper">
+  <fieldset>
+    <legend>Регистрация</legend>
+    <div class="table">
+      <label>Логин</label>
+      <input type="text" [(ngModel)]="username" />
+      <label>Пароль</label>
+      <input type="password" [(ngModel)]="password" />
+      <label style="white-space: nowrap;">Подтверждение</label>
+      <input type="password" [(ngModel)]="testpassword" />
+      <div class="row">
+        <button class="btn btn-primary" (click)="registry()">Зарегистрироваться</button>
+      </div>
+    </div>
+  </fieldset>
+</div>
